Eforce - Personal Dev/src/objects/ActionRequestItem__c.object
<CustomObject>
    <fields>
        <fullName>ActionRequest__c</fullName>
        <label>ActionRequest</label>
        <referenceTo>ActionRequest__c</referenceTo>
        <relationshipLabel>ActionRequestItems</relationshipLabel>
        <relationshipName>ActionRequestItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ActionRequestItem</label>
    <nameField>
        <displayFormat>ARITEM-{000000}</displayFormat>
        <label>ActionRequestItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ActionRequestItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>